<resources>
    <string name="app_name">Task1</string>
    <string name="heading">Heading</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="college">College</string>
    <string name="enter_your_college">Enter your college</string>
    <string name="contact">Contact</string>
    <string name="enter_your_contact">Enter your contact</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="button">Submit</string>
    <string name="enter_you_department">Enter your department</string>
    <string name="are_you_a_college_student">Are you a college student?</string>
    <string name="next">Next</string>
    <string name="next_page">Next Page</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="enter_a_valid_number">Enter a valid number</string>
    <string name="fill_this">Fill this</string>
</resources>