<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/dp_10"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IntentTask">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/next_page"
        android:textSize="@dimen/sp_50"
        android:textAlignment="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_5">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/sp_25"
            android:padding="@dimen/dp_10"
            android:textAlignment="center"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName|textCapWords"
            android:textSize="@dimen/sp_25"
            android:id="@+id/name"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/college"
            android:textSize="@dimen/sp_25"
            android:padding="@dimen/dp_10"
            android:textAlignment="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_college"
            android:textSize="@dimen/sp_25"
            android:id="@+id/etCollege"
            android:inputType="textPersonName"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textAlignment="center"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_25"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_contact"
            android:inputType="number"
            android:maxLength="10"
            android:textSize="@dimen/sp_25"
            android:id="@+id/contact"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_25"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:textSize="@dimen/sp_25"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:textAlignment="center"/>
    </LinearLayout>
</LinearLayout>